force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/Demo_Assist_Mock_Data_Generator_Rule__c.object-meta.xml
<CustomObject>
    <description>Rules for Mock Data Generator - defines which object types can be generated and how they should be generated</description>
    <label>Demo Assist Mock Data Generator Rule</label>
    <nameField>
        <label>Rule Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Assist Mock Data Generator Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>