force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/AllowedParentObjects__c.field-meta.xml
<CustomField>
    <fullName>AllowedParentObjects__c</fullName>
    <description>JSON map of allowed parent objects and their relationship field names. Example: {&quot;Account&quot;:&quot;AccountId&quot;,&quot;_standalone&quot;:null}</description>
    <label>Allowed Parent Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>