force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/DefaultCount__c.field-meta.xml
<CustomField>
    <fullName>DefaultCount__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Default number of records to generate if not specified by user</description>
    <label>Default Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>