force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/ExampleJsonData__c.field-meta.xml
<CustomField>
    <fullName>ExampleJsonData__c</fullName>
    <description>Example JSON structure showing the expected output format for this object type</description>
    <label>Example JSON Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>