force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is active and available for use</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>