force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/ObjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ObjectDescription__c</fullName>
    <description>Detailed instructions for the LLM on how to generate this object type, including field requirements and business context</description>
    <label>Object Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>