force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/ObjectToGenerate__c.field-meta.xml
<CustomField>
    <fullName>ObjectToGenerate__c</fullName>
    <description>The Salesforce object API name to generate (e.g., Contact, Account, EmailMessage)</description>
    <label>Object To Generate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>