force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <description>the description about in what situation we should use this rule to generate mock data (imaging the Classification Description in agent topic)</description>
    <inlineHelpText>the description about in what situation we should use this rule to generate mock data (imaging the Classification Description in agent topic)</inlineHelpText>
    <label>Rule Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>