force-app/main/default/objects/Demo_Assist_Mock_Data_Generator_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjectToGenerate__c</columns>
    <columns>AllowedParentObjects__c</columns>
    <columns>External_ID__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>